# mods

./: .gitignore  CMakeLists.txt  README.md  configuration.hpp  correspondencebank.cpp  correspondencebank.h  descriptors_parameters.hpp  export_descriptors.cpp  extract_features.cpp  extract_regions_for_benchmark.cpp  imagerepresentation.cpp  imagerepresentation.h  io_mods.cpp  io_mods.h  license.txt  mods.cpp  mods_multi.cpp  opencv_3_0_compatibility.hpp  orsa.cpp  orsa.h  readme.txt  synth-detection.cpp  synth-detection.hpp
TILDE/c++/: CMakeLists.txt
TILDE/c++/3rdParties/: rgbConvertMex.hpp  sse.hpp  wrappers.hpp
TILDE/c++/filters/: Chamonix.txt  Chamonix24.txt  Courbevoie.txt  Courbevoie24.txt  Frankfurt.txt  Frankfurt24.txt  Mexico.txt  Mexico24.txt  Panorama.txt  Panorama24.txt  StLouis.txt  StLouis24.txt
TILDE/c++/src/: NonMaxSup.cpp  NonMaxSup.hpp  demo.cpp  libTILDE.cpp  libTILDE.hpp
akaze/: CMakeLists.txt
akaze/src/: CMakeLists.txt
akaze/src/lib/: AKAZE.cpp  AKAZE.h  AKAZEConfig.h  config.h  nldiffusion_functions.cpp  nldiffusion_functions.h  utils.cpp  utils.h
cnpy/: CMakeLists.txt  cnpy.h
cnpy/zlib/: CMakeLists.txt
dali/: dali.c  dali.h  dali_dist.c  dali_internal.h  dali_mesh.c
degensac/: Fcustomdef.h  Ftools.c  Ftools.h  Htools.c  Htools.h  RanF-gan.c  exp_ranF.c  exp_ranF.h  exp_ranH.c  exp_ranH.h  experF-gan.c  experF.c  experF.h  proF-gan.c  proF.c  proF.h  ranF.c.2004  ranF.c.2006  ranHwald.c  ranHwald.h  rtools.c  rtools.h  scons.what  usac.cpp  usac.h  utools.c  utools.h  waldtools.c  waldtools.h
degensac/ransac/: ransac.dsp  ransac.vcproj
degensac/usac/: ConfigParams.cpp  ConfigParams.h  FTools.cpp  FTools.h  FundMatrixEstimator.hh  HTools.cpp  HTools.h  HomogEstimator.hh  MathFunctions.cpp  MathFunctions.h  USAC.hh
descriptors/: bicedescriptor.hpp  briskdescriptor.hpp  daisydescriptor.hpp  dalidescriptor.hpp  freakdescriptor.hpp  kazedescriptor.hpp  mroghdesc.hpp  orbdescriptor.hpp  pixelsdesc.hpp  smslddescriptor.hpp  ssimdescriptor.hpp  surfdescriptor.hpp
detectors/: CMakeLists.txt  detectors_parameters.hpp  helpers.cpp  helpers.h  structures.hpp
detectors/____new-saddle/: anyoption.cpp  fast.cpp  fast.hpp  saddlepts.cpp  sorb.cpp
detectors/affinedetectors/: CMakeLists.txt  affine.cpp  affine.h  hesbmbrg.diff  pyramid.cpp  pyramid.h  scale-space-detector.cpp  scale-space-detector.hpp
detectors/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  saddlepts
detectors/mser/: CMakeLists.txt  Makefile  README  cmake_install.cmake  config
detectors/mser/LL/: LL.c  LL.h  LLfile.c  LLio.c  LLmergeSort.c  LLstr.c  Makefile  cmake_install.cmake  linkLL.h
detectors/mser/extrema/: Makefile  boundary.cpp  boundary.h  cmake_install.cmake  extrema-bin  extrema.cpp  extrema.h  extremaConfig.h  extremaParams.h  extremaTypes.h  getExtrema.cpp  getExtrema.h  libExtrema.cpp  libExtrema.h  optThresh.cpp  optThresh.h  preprocess.cpp  preprocess.h  readme-bin.txt  sortPixels.cpp  sortPixels.h  suballoc.cpp  suballoc.h
detectors/mser/imageutls/: Makefile  imageread.h
detectors/mser/optionGM/: Makefile  option.c  option.h  optionDouble.c  optionGM.h  optionInt.c  optionList.c  optionMisc.c  optionPriv.h
detectors/mser/utls/: Makefile  ary.h  dtypes.h  ecompat.h  matrix.cpp  matrix.h  timeutls.c  timeutls.h
detectors/new-saddle/: CMakeLists.txt  fast.cpp  fast_score.cpp  fast_score.hpp  saddlepts.cpp  sorb.cpp  sorb.h
detectors/new-saddle_old/: CMakeLists.txt  fast.cpp  fast_score.hpp  saddlepts.cpp  sorb.cpp
detectors/outputs/: deltas.txt
detectors/saddle-src/: CMakeLists.txt  fast.cpp  fast.hpp  fast_score.cpp  hist_deltas.m  nms.cpp  saddlepts.cpp  sorb.cpp  sorb.h
detectors/saddle-src2/: CMakeLists.txt  fast(bkup15032016).cpp  fast.cpp  sorb.cpp  sorb.h
detectors/saddle-src2/bb/: CMakeCache.txt  Makefile  cmake_install.cmake
detectors/saddle_detector/: .cproject  .project
detectors/saddle_detector/debug/: CMakeCache.txt  saddlepts
detectors/saddle_detector/src/: CMakeCache.txt  CMakeLists.txt  Makefile  anyoption.h  cmake_install.cmake  fast.hpp  fast_score.cpp  saddlepts.cpp
inih/: CMakeLists.txt  ini.c  ini.h
inih/cpp/: INIReader.cpp  INIReader.h
lapack_for_windows/lib/: libblas.lib  liblapack.lib
libdaisy/: CHANGE  CMakeLists.txt  LICENCE  README  makefile  makefile.in
libdaisy/include/daisy/: daisy.h
libdaisy/include/kutility/: convolution.h  convolution_default.h  convolution_opencv.h  corecv.h  fileio.h  fileio.tcc  general.h  image.h  image_io.h  image_io_bmp.h  image_io_jpeg.h  image_io_png.h  image_io_pnm.h  image_manipulation.h  interaction.h  kutility_def.hpp  math.hpp  progress_bar.h
libdaisy/src/: corecv.cpp  daisy.cpp  general.cpp  image_io_bmp.cpp  image_io_jpeg.cpp  image_io_png.cpp  image_io_pnm.cpp  image_manipulation.cpp  interaction.cpp  main.cpp  progress_bar.cpp
matching/: liopdesc.hpp  matching.cpp  matching.hpp  siftdesc.cpp  siftdesc.h
mrogh/: CMakeLists.txt  README  main.cpp  mrogh.cpp  mrogh.h
opensurf/: CMakeLists.txt  README.txt  fasthessian.cpp  fasthessian.h  integral.h  ipoint.cpp  surf.cpp  surf.h  surflib.h  utils.cpp  utils.h
scv/: CMakeLists.txt  arrays.h  arrays.hpp  scv.cpp  scv.hpp  scv_entrypoint.cpp  scv_entrypoint.hpp  utls3x3.cpp  utls3x3.hpp
smsld/: Image.cpp  Image.h  Match.cpp  Match.h  PointsDesc.cpp  PointsDesc.h  SiftUtil.h  TianMatch.cpp  descriptor.cpp  descriptor.h  license.txt  matlib.h  readme.md  stdafx.h  wzhlib.cpp  wzhlib.h
ssdesc-cpp-1.1.1/: mexCalcSsdescs.cc  readme.txt  ssdesc.cc  ssdesc.h
